fixed scrollbar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,9 +67,6 @@ body {
 ::-webkit-scrollbar {
   width: 12px;
 }
-*:hover::-webkit-scrollbar {
-  width: 8px;
-}
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   background: var(--negative-grey);
